Ticket #1091 (closed defect: fixed)

Opened 2 years ago

Last modified 1 year ago

Speex RTP payload selection

Reported by: rjscheif Assigned to:
Priority: normal Milestone:
Component: Demuxers Version: 0.8.6a
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description

When trying to receive a Speex encoded stream with VLC using the RTSP/RTP/SDP protocols, VLC can not select a valid decoder because of a conflict between Live555 and VLC.

In the Live555 source (MediaSession?.cpp) there is a line of code that checks the SDP codec name:

strcmp(fCodecName, "SPEEX") == 0 // SPEEX audio

In the VLC source (ogg.c) there is also a line of code that checks the SDP codec to load the proper codec: else if( !strncmp(content_type_string, "audio/x-speex", 14) )

VLC is checking for the string "x-speex" while Live555 is checking for the string "speex". This is never going to work because you can't have both.

email: scheifele2001@yahoo.com OS: Windows2000 VLC version: 0.8.6a related hardware: none

You can always reproduce this problem if you are connecting to a server that is serving up a speex stream via RTSP/RTP/SDP.

Change History

18/06/07 22:55:35 changed by fenrir

  • status changed from new to closed.
  • resolution set to fixed.

(In [20622]) Added speex check in RTSP (untested, close #1091)