Added speex check in RTSP (untested, close #1091)